# opengl33-sdl2

./: CMakeLists.txt  LICENSE.txt  README.md  conanfile.txt
src/: bootstrap_ogl33_sdl2.cpp
